--- a/src/app/barra/barra.component.html
+++ b/src/app/barra/barra.component.html
@@ -19,13 +19,13 @@
                 <li class="nav-item" data-toggle="tooltip" data-placement="top" title="Buscar productos">
                     <a class="nav-link icon select-input" routerLink ="/productos">
                         <img src="assets/iconos/BuscarProductos.png"  alt="Buscar productos" width="50px" height="50px">
-                        <a>Buscar productos</a>
+                        <a>Buscar productos <br> (Proximamente) </a>
                     </a>
                 </li>
                 <li class="nav-item" data-toggle="tooltip" data-placement="top" title="Ean">
                     <a class="nav-link icon select-input" routerLink ="/proximamente">
                         <img src="assets/iconos/escanearProducto.png"  alt="Escanear EAN-CODE" width="50px" height="50px">
-                        <a>Escanear EAN-CODE</a>
+                        <a>Escanear EAN-CODE<br> (Proximamente) </a>
                     </a>
                 </li>
             </ul>
