--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,12 +11,12 @@
                     <div class="col-auto">
                         <a class="btn button-prov " routerLink ="/provincias" role="button">Seleccionar Provincias</a>
                     </div>
-                    <div class="col-auto">
+                    <!-- <div class="col-auto">
                         <a class="btn button-prod " routerLink="'productos'" role="button"> Buscar Productos</a>
                     </div>
                     <div class="col-auto">
                         <a class="btn button-ean " routerLink="'productos'" role="button"> Escanear EAN-CODE</a>
-                    </div>
+                    </div> -->
                 </div>
                 <hr>
             </div>
@@ -24,7 +24,7 @@
 </div>
 <hr>
 
-<!-- <div class="container my-3">
+<div class="container my-3">
     <footer
             class="text-center text-lg-start text-dark"
             style="background-color: #ECEFF1">
@@ -44,7 +44,7 @@
                 />
             <p>
                 Nos dedicamos a brindar informacion sobre 
-                productos que no sufrieron aumnentos.
+                productos que no sufrieron aumentos, bajo las normativas gubernamentales.
             </p>
             </div>
 
@@ -53,10 +53,10 @@
             <hr
                 class="mb-4 mt-0 d-inline-block mx-auto"
                 style="width: 60px; background-color: #7c4dff; height: 2px"/>
-            <p><i class="fas fa-home mr-3"></i> Ushuaia, Tierra del fuego</p>
-            <p><i class="fas fa-envelope mr-3"></i> SinAumento@gmail.com</p>
-            <p><i class="fas fa-phone mr-3"></i>Leal Cristian</p>
-            <p><i class="fas fa-print mr-3"></i> Nicolas Schvemler</p>
+            <p><i class="fas fa-home mr-3"></i>--> Ushuaia, Tierra del fuego</p>
+            <p><i class="fas fa-envelope mr-3"></i>--> SinAumento@gmail.com</p>
+            <p><i class="fas fa-phone mr-3"></i>--> Leal Cristian</p>
+            <p><i class="fas fa-print mr-3"></i>--> Nicolas Schvemler</p>
             </div>
         </div>
         </div>
@@ -69,4 +69,4 @@
         >SinAumento.com</a>
     </div>
     </footer>
-</div> -->
+</div>
